Added Mailkit, added Azure Vault, added Google Recaptcha

--- a/MyWebsite/Properties/launchSettings.json
+++ b/MyWebsite/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -13,16 +13,10 @@
       "launchBrowser": true,
       "launchUrl": "https://localhost:44384/",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUP__KEYVAULT__CONFIGURATIONENABLED": "true",
+        "ASPNETCORE_HOSTINGSTARTUP__KEYVAULT__CONFIGURATIONVAULT": "https://PortfolioWebsiteKeyVault.vault.azure.net"
       }
-    },
-    "PortfolioWebsite": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:49895/"
     }
   }
 }
