--- a/MyWebsite/appsettings.Development.json
+++ b/MyWebsite/appsettings.Development.json
@@ -6,5 +6,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Connection String",
+    "PortfolioConnection": "Connection String"
+  },
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.gmail.com", //smtp.gmail.com
+    "SmtpPort": 465,
+    "SmtpUsername": "smtpusername",
+    "SmtpPassword": "smtppassword"
   }
 }
