--- a/MyWebsite/appsettings.json
+++ b/MyWebsite/appsettings.json
@@ -1,10 +1,7 @@
 ﻿{
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-PortfolioWebsite-15E151F6-D056-4326-B795-6CB6AD800136;Trusted_Connection=True;MultipleActiveResultSets=true"
-  //},
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-Q95A1R1\\MSSQLSERVERJT;Database=master;User=sa;Password=fmdgretta90"
+    "DefaultConnection": "Connection String",
+    "PortfolioConnection": "Connection String"
   },
 
   "Logging": {
@@ -12,7 +9,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.gmail.com", //smtp.gmail.com
+    "SmtpPort": 465,
+    "SmtpUsername": "smtpusername",
+    "SmtpPassword": "smtppassword"
   }
 }
-
-
